SFWEB-296 Fix align of channel images in the channel menu.

--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -46,6 +46,7 @@ a.channel-logo:hover, a.channel-logo:focus {
 
 a.channel-logo {
   margin-bottom: 20px;
+  width: auto;
   img {
     vertical-align: middle;
     max-width: 100px;
